# GUI-Timer

./: CMakeLists.txt  readme.md
include/: Timer.hpp
src/: Timer.cpp  main.cpp
